add initial redis

--- a/config_sample.yaml
+++ b/config_sample.yaml
@@ -5,3 +5,5 @@ env:
   - env2
 names: PATH_TO_CLUSTER_NAMES
 module: MODULE_OR_FILE_FOR_CLUSTERER_TO_LAUNCH
+redis: REDIS_URL
+redis_channel: REDIS_CHANNEL_TO_SEND_MESSAGES_TO
