--- a/config_sample.yaml
+++ b/config_sample.yaml
@@ -17,3 +17,4 @@ allowed_ids:
 oauth:
   client_id: 928702343732658256
   client_secret: SECRETHERE
+  redirect_url: http://localhost:1293 # must end in /confirm
