--- a/web/mewld-ui/package.json
+++ b/web/mewld-ui/package.json
@@ -5,7 +5,7 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"package": "svelte-kit package",
-		"preview": "vite preview",
+		"preview": "vite preview --host",
 		"test": "playwright test",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -33,8 +33,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-node": "^1.0.0-next.86",
 		"cookie": "^0.5.0",
 		"node-sass": "^7.0.1",
+		"pm2": "^5.2.0",
 		"sass": "^1.54.4"
 	}
 }
